# OS-labs

./: .gitignore
lab1/: Makefile  build.sh
lab2/: CMakeLists.txt  build.sh
lab2/posix/: main.cpp  subprogram.cpp
lab2/posix/lib/: bg.cpp  bg.hpp
lab2/win/: main.cpp  subprogram.cpp
lab2/win/lib/: bg.cpp  bg.hpp
lab3/: CMakeLists.txt  build.bat
lab3/src/: main.cpp  util.hpp  util_posix.cpp  util_win.cpp
lab4/: CMakeLists.txt
lab4+5/: CMakeLists.txt
lab4+5/src/: main.cpp  my_serial.hpp  server.hpp  simulator.cpp
lab4+5/src/logs/: gen_logs.py
lab4+5/src/public/: index.html  script.js  style.css
lab4/src/: main.cpp  simulator.cpp
lab7/: CMakeLists.txt  config.h  mainwindow.cpp  mainwindow.h
